2012-09-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Implement ViewState methods in PageClientImpl in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=97202

        Reviewed by Martin Robinson.

        * WebKitTestRunner/gtk/PlatformWebViewGtk.cpp:
        (WTR::PlatformWebView::focus): Focus the view.

2012-09-21  Sudarsana Nagineni  <sudarsana.nagineni@intel.com>

        [WTR] Memory leaks in InjectedBundleController::initialize()
        https://bugs.webkit.org/show_bug.cgi?id=97329

        Reviewed by Alexey Proskuryakov.

        Fix leaks in InjectedBundleController::initialize() by adopting
        strings created with WKStringCreateWithUTF8CString().

        * TestWebKitAPI/InjectedBundleController.cpp:
        (TestWebKitAPI::InjectedBundleController::initialize):

2012-09-21  Marcelo Lira  <marcelo.lira@openbossa.org>

        [Qt][WK2] Removed duplicated code from EventSenderProxy::keyDown
        https://bugs.webkit.org/show_bug.cgi?id=97235

        Reviewed by Luiz Agostini.

        * WebKitTestRunner/qt/EventSenderProxyQt.cpp:
        (WTR::EventSenderProxy::keyDown):

2012-09-21  Gergely Kis  <gergely@homejinni.com>

        Add MIPS build slave to build.webkit.org
        https://bugs.webkit.org/show_bug.cgi?id=96713

        Reviewed by Csaba Osztrogonác.

        Added a build slave for MIPS, and enabled a builder for 
        Qt Linux MIPS32R2 little-endian release build.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2012-09-21  Peter Beverloo  <peter@chromium.org>

        [Chromium] Switch back to a fixed fifo path for Android
        https://bugs.webkit.org/show_bug.cgi?id=97230

        Reviewed by Tony Chang.

        Because not all external storage cards will be formated using a file
        system that supports named pipes, Chromium has been changed to creating
        the pipes in a temporary folder on the internal storage. Adapt this in